feat: smart agent and read me

--- a/report/Continuous_Control_report.ipynb
+++ b/report/Continuous_Control_report.ipynb
@@ -4,65 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Continuous Control\n",
+    "# Continuous Control Report\n",
     "\n",
     "---\n",
     "\n",
-    "You are welcome to use this coding environment to train your agent for the project.  Follow the instructions below to get started!\n",
+    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
     "\n",
-    "### 1. Start the Environment\n",
+    "## 1. About the problem\n",
     "\n",
-    "Run the next code cell to install a few packages.  This line will take a few minutes to run!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mtensorflow 1.7.1 has requirement numpy>=1.13.3, but you'll have numpy 1.12.1 which is incompatible.\u001b[0m\r\n",
-      "\u001b[31mipython 6.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.15, but you'll have prompt-toolkit 2.0.9 which is incompatible.\u001b[0m\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip -q install ./python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The environments corresponding to both versions of the environment are already saved in the Workspace and can be accessed at the file paths provided below.  \n",
+    "The rapid growth of data sets means that\n",
+    "machine learning can now use complex\n",
+    "model classes and tackle highly non-trivial\n",
+    "inference problems. Such problems are usually\n",
+    "characterized by several factors: the data\n",
+    "are multidimensional;\n",
+    "the underlying pattern\n",
+    "is complex (for instance, it might be nonlinear\n",
+    "or changeable); and the designer has only weak\n",
+    "prior knowledge about the problem — in particular,\n",
+    "a mechanistic understanding is lacking.\n",
     "\n",
-    "Please select one of the two options below for loading the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import random\n",
-    "import copy\n",
-    "from collections import namedtuple, deque\n",
+    "[//]: # (Image References)\n",
     "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
+    "[image1]: https://user-images.githubusercontent.com/10624937/43851024-320ba930-9aff-11e8-8493-ee547c6af349.gif \"Trained Agent\"\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import time\n",
+    "For this project, you will work with the [Reacher](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Learning-Environment-Examples.md#reacher) environment.\n",
     "\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n"
+    "![Trained Agent][image1]\n",
+    "\n",
+    "In this environment, a double-jointed arm can move to target locations. A reward of +0.1 is provided for each step that the agent's hand is in the goal location. Thus, the goal of your agent is to maintain its position at the target location for as many time steps as possible.\n",
+    "\n",
+    "The observation space consists of 33 variables corresponding to position, rotation, velocity, and angular velocities of the arm. Each action is a vector with four numbers, corresponding to torque applicable to two joints. Every entry in the action vector should be a number between -1 and 1.\n",
+    "\n",
+    "Run the code cell below to print some information about the environment."
    ]
   },
   {
@@ -123,15 +97,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Examine the State and Action Spaces\n",
-    "\n",
-    "Run the code cell below to print some information about the environment."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -178,7 +143,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
+    "## 2. Benchmark\n",
+    "\n",
+    "Agents will take random actions in the Environment.\n",
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
     "\n",
@@ -224,38 +191,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When finished, you can close the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# env.close()"
+    "When finished, you will get a score around 0.04."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. It's Your Turn!\n",
+    "## 3. Solution\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  A few **important notes**:\n",
-    "- When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```\n",
-    "- To structure your work, you're welcome to work directly in this Jupyter notebook, or you might like to start over with a new file!  You can see the list of files in the workspace by clicking on **_Jupyter_** in the top left corner of the notebook.\n",
-    "- In this coding environment, you will not be able to watch the agents while they are training.  However, **_after training the agents_**, you can download the saved model weights to watch the agents on your own machine! "
+    "Deep Deterministic Policy Gradient (DDPG) is an algorithm which concurrently learns a Q-function and a policy. It uses off-policy data and the Bellman equation to learn the Q-function, and uses the Q-function to learn the policy.\n",
+    "\n",
+    "This approach is closely connected to Q-learning, and is motivated the same way: if you know the optimal action-value function $Q^*(s,a)$, then in any given state, the optimal action $a^*(s)$ can be found by solving\n",
+    "\n",
+    "$a^*(s) = \\arg \\max_a Q^*(s,a)$\n",
+    "\n",
+    "DDPG interleaves learning an approximator to $Q^*(s,a)$ with learning an approximator to $a^*(s)$, and it does so in a way which is specifically adapted for environments with continuous action spaces. But what does it mean that DDPG is adapted specifically for environments with continuous action spaces? It relates to how we compute the max over actions in $\\max_a Q^*(s,a)$.\n",
+    "\n",
+    "When there are a finite number of discrete actions, the max poses no problem, because we can just compute the Q-values for each action separately and directly compare them. (This also immediately gives us the action which maximizes the Q-value.) But when the action space is continuous, we can’t exhaustively evaluate the space, and solving the optimization problem is highly non-trivial. Using a normal optimization algorithm would make calculating $\\max_a Q^*(s,a)$ a painfully expensive subroutine. And since it would need to be run every time the agent wants to take an action in the environment, this is unacceptable.\n",
+    "\n",
+    "Because the action space is continuous, the function $Q^*(s,a)$ is presumed to be differentiable with respect to the action argument. This allows us to set up an efficient, gradient-based learning rule for a policy $\\mu(s)$ which exploits that fact. Then, instead of running an expensive optimization subroutine each time we wish to compute $\\max_a Q(s,a)$, we can approximate it with $\\max_a Q(s,a) \\approx Q(s,\\mu(s))$. See the Key Equations section details.\n",
+    "\n",
+    "\n",
+    "<img src=\"./ddpg.svg\"  height=\"500\" width=\"800\" align='left'>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model"
+    "### Distributed Training\n",
+    "\n",
+    "Basic agent takes DDPG codes from https://github.com/udacity/deep-reinforcement-learning/tree/master/ddpg-pendulum as reference with following modifications.\n",
+    "\n",
+    "- Add normalization layer in Actor and Critic model. See complete codes below..."
    ]
   },
   {
@@ -340,7 +309,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Agent"
+    "- Generate noises for all agents:\n",
+    "``` python\n",
+    "def __init__(self, state_size, action_size, random_seed, num_agents=1):\n",
+    "    ...\n",
+    "    # Noise process\n",
+    "    self.noise = OUNoise(action_size * num_agents, random_seed)\n",
+    "    ...\n",
+    "```\n",
+    "- Reshape noises when acting for all agents.\n",
+    "``` python\n",
+    "def act(self, state, add_noise=True):\n",
+    "    ...\n",
+    "    if add_noise:\n",
+    "        noise = self.noise.sample().reshape(-1, self.action_size)\n",
+    "    ...\n",
+    "```\n",
+    "\n",
+    "- Parameterise step with `timestep`, and learn `LEARN_NUM` epochs every `LEARN_EVERY` timesteps:\n",
+    "``` python\n",
+    "def step(self, state, action, reward, next_state, done, timestep):\n",
+    "    ...\n",
+    "    # Learn at defined interval, if enough samples are available in memory\n",
+    "    if len(self.memory) > BATCH_SIZE and timestep % LEARN_EVERY == 0:\n",
+    "        for _ in range(LEARN_NUM):\n",
+    "            experiences = self.memory.sample()\n",
+    "            self.learn(experiences, GAMMA)\n",
+    "```\n",
+    "\n",
+    "See complete codes below..."
    ]
   },
   {
@@ -537,7 +534,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train"
+    "### Training and Result\n",
+    "\n",
+    "This whole training takes about 6 hours with GPUs. So it's important to record every detail during the training. To do that, the min, max, and average score of agents are saved in every episode and be plotted every 100 episodes. The model will be saved at every 100 episodes and the point we get over 30.\n",
+    "\n",
+    "See complete codes below..."
    ]
   },
   {
@@ -620,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Result"
+    "### Hyperparameters & Result"
    ]
   },
   {
@@ -698,12 +699,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#env.close()"
+    "### Smart agent\n",
+    "\n",
+    "Please open the Smart_Agent.ipynb notebook to see how this agent works.\n",
+    "\n",
+    "## 4. Future work\n",
+    "\n",
+    "### Twin Delayed DDPG(TD3)\n",
+    "\n",
+    "While DDPG can achieve great performance sometimes, it is frequently brittle with respect to hyperparameters and other kinds of tuning. A common failure mode for DDPG is that the learned Q-function begins to dramatically overestimate Q-values, which then leads to the policy breaking, because it exploits the errors in the Q-function. Twin Delayed DDPG (TD3) is an algorithm which addresses this issue by introducing three critical tricks:\n",
+    "\n",
+    "Trick One: Clipped Double-Q Learning. TD3 learns two Q-functions instead of one (hence “twin”), and uses the smaller of the two Q-values to form the targets in the Bellman error loss functions.\n",
+    "\n",
+    "Trick Two: “Delayed” Policy Updates. TD3 updates the policy (and target networks) less frequently than the Q-function. The paper recommends one policy update for every two Q-function updates.\n",
+    "\n",
+    "Trick Three: Target Policy Smoothing. TD3 adds noise to the target action, to make it harder for the policy to exploit Q-function errors by smoothing out Q along changes in action.\n",
+    "\n",
+    "Together, these three tricks result in substantially improved performance over baseline DDPG.\n",
+    "\n",
+    "\n",
+    "### Distributed Distributional Deterministic Policy Gradients(D4PG)\n",
+    "\n",
+    "from https://openreview.net/forum?id=SyZipzbCb author mentioned:\n",
+    "\n",
+    "This work adopts the very successful distributional perspective on reinforcement learning and adapts it to the continuous control setting. We combine this within a distributed framework for off-policy learning in order to develop what we call the Distributed Distributional Deep Deterministic Policy Gradient algorithm, D4PG. We also combine this technique with a number of additional, simple improvements such as the use of N-step returns and prioritized experience replay. Experimentally we examine the contribution of each of these individual components, and show how they interact, as well as their combined contributions. Our results show that across a wide variety of simple control tasks, difficult manipulation tasks, and a set of hard obstacle-based locomotion tasks the D4PG algorithm achieves state of the art performance.\n",
+    "\n",
+    "<img src=\"./D4.png\"  height=\"500\" width=\"800\" align='left'>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Prioritized Replay\n",
+    "\n",
+    "Prioritized replay can make learning from experience replay\n",
+    "more efficient. Here's one possible implementation of prioritized replay.\n",
+    "\n",
+    "<img src=\"./priority.png\"  height=\"500\" width=\"800\" align='left'>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 5. Refernece\n",
+    "- Deterministic Policy Gradient Algorithms, Silver et al. 2014\n",
+    "- Continuous Control With Deep Reinforcement Learning, Lillicrap et al. 2016\n",
+    "- https://spinningup.openai.com/en/latest/algorithms/ddpg.html#background\n",
+    "- https://spinningup.openai.com/en/latest/algorithms/td3.html\n",
+    "- https://openreview.net/forum?id=SyZipzbCb"
    ]
   }
  ],
@@ -723,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
